# E-Voting-System

./: .gitignore  CMakeLists.txt  CompileRun.sh  Makefile  New Text Document.txt  README.md  Roadmap.txt  new.cpp  run_make.bat
BASIC MODEL/: class.cpp
CodeBlocksProject/: CodeBlocksProject.cbp  CodeBlocksProject.depend  CodeBlocksProject.layout  main.cpp
SQL/: DatabaseQueries.sql  tablesStructure.sql
data/: candidates.json  cities.json  constituencies.json  constituency.json  counters.json  elections.json  parties.json  polling_stations.json  pollingstations.json  results.json  voters.json  votes.json
docs/: NewRoadmap.txt  README.md  Roadmap.txt  ThingsToReview.txt
include/custom/: config.h
src/: main.cpp
src/cli/: CLI.cpp  CLI.h  FTXUI.cpp  FTXUI.h
src/core/: AdminCLI.cpp  AdminCLI.h  Universal.cpp  Universal.h  UserCLI.cpp  UserCLI.h  VotingSystem.cpp  VotingSystem.h
src/db/: Database.cpp
src/models/: Candidate.cpp  Candidate.h  City.cpp  City.h  Constituency.cpp  Constituency.h  Election.cpp  Election.h  Party.cpp  Party.h  PollingStation.cpp  PollingStation.h  Result.cpp  Result.h  Vote.cpp  Vote.h  Voter.cpp  Voter.h
